k8s/edge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edge
  labels:
    app.kubernetes.io/name: edge
